[package]
name = "avr-examples"
version = "0.1.0"
authors = ["David Sawatzke <d-git@sawatzke.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"

[dependencies.arduino-leonardo]
git = "https://github.com/Rahix/avr-hal"
rev = "885e8ec6d6d2fe34f26a1e2697a99f41092f0985"

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = "fat"
opt-level = 3
