[package]
name = "longan-nano-examples"
version = "0.1.0"
authors = ["Jordan Williams <jordan@jwillikers.com>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2.3"
embedded-time = "0.12.0"
longan-nano = "0.3.0"
nb = "0.1"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["riscv"] }
riscv-rt = "0.8.0"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"

[profile]
[profile.dev]
codegen-units = 1
debug = true
lto = true
opt-level = 3

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
