[package]
name = "lpc845-examples"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

[dev-dependencies]
panic-rtt-target = {version = "0.1.1", features = ["cortex-m"]}
rtt-target = {version = "0.3", features = ["cortex-m"]}
lpc8xx-hal = {version = "0.8.2", features = ["845-rt"]}
smart-leds = "0.3.0"
ws2812-spi = "0.3.0"

[profile.release]
debug = true
lto = "fat"
opt-level = 3

[patch.crates-io]
ws2812-spi = { git = "https://github.com/smart-leds-rs/ws2812-spi-rs", branch = "update_spi"}
