[package]
name = "stm32f0-examples"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

[dev-dependencies]
bare-metal = "0.2.4"
cortex-m = "0.6.1"
cortex-m-rt = "0.6"
panic-halt = "0.2"
stm32f0xx-hal = {version = "0.15", features = ["stm32f030x4"]}
smart-leds = "0.3.0"
ws2812-spi = "0.2.0"
ws2812-timer-delay = {version = "0.3.0", features = ["slow"]}
apa102-spi = "0.3.2"
