[package]
name = "stm32f0-examples"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

[dev-dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6.13"
panic-rtt-target = {version = "0.1.1", features = ["cortex-m"]}
rtt-target = {version = "0.3", features = ["cortex-m"]}
stm32f0xx-hal = {version = "0.17", features = ["stm32f030x4"]}
smart-leds = "0.3.0"
ws2812-spi = "0.3.0"
ws2812-timer-delay = {version = "0.3.0", features = ["slow"]}
apa102-spi = "0.3.2"

[patch.crates-io]
ws2812-spi = { git = "https://github.com/smart-leds-rs/ws2812-spi-rs", branch = "update_spi"}
# Wait until stm32-rs/stm32f0xx-hal/122 is merged
stm32f0xx-hal = {git = "https://github.com/dkm/stm32f0xx-hal"}
