[package]
name = "stm32f0"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

[dev-dependencies]
bare-metal = "0.2.4"
cortex-m = "0.5.8"
cortex-m-rt = "0.6"
panic-halt = "0.2"
stm32f0xx-hal = {version = "0.11", features = ["stm32f030x4"]}
smart-leds = {git = "https://github.com/smart-leds-rs/smart-leds"}
ws2812-spi = {git = "https://github.com/smart-leds-rs/ws2812-spi-rs"}
ws2812-timer-delay = {git = "https://github.com/smart-leds-rs/ws2812-timer-delay-rs", features = ["slow"]}
