[package]
name = "stm32f1-examples"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

[dev-dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
panic-rtt-target = {version = "0.1.1", features = ["cortex-m"]}
rtt-target = {version = "0.3", features = ["cortex-m"]}
stm32f1xx-hal = {version = "0.7", features = ["rt", "stm32f103", "medium"]}
smart-leds = "0.3.0"
ws2812-spi = "0.3.0"

[patch.crates-io]
ws2812-spi = { git = "https://github.com/smart-leds-rs/ws2812-spi-rs", branch = "update_spi"}
