[package]
name = "trinket-m0-examples"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

[dev-dependencies]
trinket_m0 = { git = "https://github.com/atsamd-rs/atsamd", features = ["unproven"]}
embedded-hal = "0.2.3"
bitbang-hal = "0.3"
cortex-m-rt = "0.6"
cortex-m = "0.6"
panic-halt = "0.2"
smart-leds = "0.3"
smart-leds-trait = "0.2"
apa102-spi = "0.3"


[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
